--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
   },
   "dependencies": {
     "@iconify/react": "^5.0.2",
+    "@prisma/client": "^5.19.1",
+    "antd": "^5.20.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.3.24",
     "lucide-react": "^0.427.0",
-    "mysql2": "^3.11.0",
     "next": "14.2.5",
     "react": "^18",
     "react-datepicker": "^7.3.0",
@@ -30,6 +31,7 @@
     "postcss": "^8",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.6",
+    "prisma": "^5.19.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
