--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@iconify/react": "^5.0.2",
     "@prisma/client": "^5.19.1",
+    "@radix-ui/react-avatar": "^1.1.0",
     "antd": "^5.20.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
